@@ -9,27 +9,15 @@
 ;; - Fill in 'init-smtp' section in '~/.emacs.d/local-pre-init.el'
 ;; - Restart or `M-x eval-buffer' on 'local-pre-init.el' and this file.
 ;; - Call `C-x m' (`M-x compose-mail'), fill it, then `C-c C-c' to send it.
-;; - Enter password when asked and choose to save '~/.authinfo'.
-;; The following line will be written to the file:
+;; - Enter password when asked and store it to one of the `auth-sources'.
+;; Example authentication line:
 ;; machine smtp.xmpl.tld login user@xmpl.tld password *** port 465
-;; - For more details, consult (info "(auth) Help for users").
 ;;
 ;;; Troubleshoot
 ;; Error: "movemail: could not create mailbox ... Requested item not found"
 ;; Make sure 'mailutils' was compiled with support for TLS.
 ;;
-;;; *Secure*
-;; - Encrypt ~/.authinfo as ~/.authinfo.gpg
-;;   - In 'dired-mode': go to '~/.authinfo' and type `:e' (`epa-dired-do-encrypt').
-;; - Remove '~/.authinfo'.
-;;
-;;; Troubleshoot
-;; Error: "gpg problem with the agent: Inappropriate ioctl for device:".
-;; Fix: https://d.sb/B5N.
-;; 1. $ printf "use-agent\npinentry-mode loopback\n" >> ~/.gnupg/gpg.conf
-;; 2. $ printf "allow-loopback-pinentry\n" >> ~/.gnupg/gpg-agent.conf
-;; 3. Restart the agent:
-;;    - $ echo RELOADAGENT | gpg-connect-agent
+;; For more details, see 'init-rmail.el' *Secure* section.
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Email addresses management ;;
